@@ -12,6 +12,9 @@
 # monitored with this plugin.
 #
 # $Log$
+# Revision 1.10  2005/02/16 17:08:24  jimmyo
+# linux/if* now treats ra* interfaces as wireless.
+#
 # Revision 1.9  2005/01/29 21:17:27  jimmyo
 # Added madwifi support to linux/if_* plugins.
 #
@@ -72,7 +75,7 @@ fi
 
 if [ "$1" = "suggest" ]; then
 	if [ -r /proc/net/dev ]; then
-		egrep '(eth|wlan|ath)' /proc/net/dev | cut -f1 -d: | sed 's/ //g'
+		egrep '(eth|wlan|ath|ra)' /proc/net/dev | cut -f1 -d: | sed 's/ //g'
 		exit 0
 	else
 		exit 1
@@ -96,7 +99,7 @@ if [ "$1" = "config" ]; then
 	echo 'up.negative down'
 	echo 'up.cdef up,8,*'
 	case "$INTERFACE" in
-		ath*|wlan*)
+		ath*|wlan*|ra*)
 			echo -n "up.info Traffic of the $INTERFACE interface. Maximum speed is "
 			which iwlist >/dev/null 2>/dev/null || echo "undeterminable (please install iwlist)."
 			iwlist $INTERFACE rate 2>/dev/null | awk '/Current Bit Rate/ { split ($0, arr, "="); split (arr[2], arr2, "M"); print (arr2[1]*1000000) " bits per second.\nup.max " (arr2[1]*1000000) "\ndown.max "(arr2[1]*1000000); }'
